gke-gateway/cookies.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cookies
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
  addresses:
  - type: NamedAddress
    value: "cookies"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cookies
spec:
  parentRefs:
  - kind: Gateway
    name: cookies
  hostnames:
  - "cookies.example.com"
  rules:
  - matches:
    - headers:
      - name: Cookie
        # type: RegularExpression
        value: "Foo=Bar"
    backendRefs:
    - name: cookie-match
      port: 80
  - backendRefs:
    - name: cookie-unmatch
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cookie-match
spec:
  type: ClusterIP
  selector:
    app: cookie-match
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookie-match
  labels:
    app: cookie-match
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookie-match
  template:
    metadata:
      labels:
        app: cookie-match
    spec:
      containers:
      - name: echo
        image: mendhak/http-https-echo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: cookie-unmatch
spec:
  type: ClusterIP
  selector:
    app: cookie-unmatch
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookie-unmatch
  labels:
    app: cookie-unmatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookie-unmatch
  template:
    metadata:
      labels:
        app: cookie-unmatch
    spec:
      containers:
      - name: echo
        image: mendhak/http-https-echo:latest
