gke-gateway/headers.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: headers
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
  addresses:
  - type: NamedAddress
    value: "headers"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: headers
spec:
  parentRefs:
  - kind: Gateway
    name: headers
  hostnames:
  - "headers.example.com"
  rules:
  - matches:
    - headers:
      - name: Foo
        # type: RegularExpression
        value: Bar
    backendRefs:
    - name: header-match
      port: 80
  - backendRefs:
    - name: header-unmatch
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: header-match
spec:
  type: ClusterIP
  selector:
    app: header-match
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: header-match
  labels:
    app: header-match
spec:
  replicas: 1
  selector:
    matchLabels:
      app: header-match
  template:
    metadata:
      labels:
        app: header-match
    spec:
      containers:
      - name: echo
        image: mendhak/http-https-echo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: header-unmatch
spec:
  type: ClusterIP
  selector:
    app: header-unmatch
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: header-unmatch
  labels:
    app: header-unmatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: header-unmatch
  template:
    metadata:
      labels:
        app: header-unmatch
    spec:
      containers:
      - name: echo
        image: mendhak/http-https-echo:latest
