gke-gateway/http-and-https.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: protocol-redirect
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: protocol-redirect-tls
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
  addresses:
  - type: NamedAddress
    value: "protocol-redirect"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: protocol-redirect
spec:
  parentRefs:
  - kind: Gateway
    name: protocol-redirect
  hostnames:
  - "protocol-redirect.example.com"
  rules:
  - backendRefs:
    - name: protocol-redirect
      weight: 1
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: protocol-redirect
spec:
  type: ClusterIP
  selector:
    app: protocol-redirect
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: protocol-redirect
  labels:
    app: protocol-redirect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: protocol-redirect
  template:
    metadata:
      labels:
        app: protocol-redirect
    spec:
      containers:
      - name: echo
        image: mendhak/http-https-echo:latest
